Se crea el endpoint para crear una orden y que envíe un message al topic de kafka para que pueda ser consumido

--- a/src/main/resources/application.dev.properties
+++ b/src/main/resources/application.dev.properties
@@ -1,1 +1,6 @@
-
+# ===============================
+# = SWAGGER
+# ===============================
+springdoc.packagesToScan=ar.com.cart.demo
+#springdoc.pathsToMatch=/v1,/
+springdoc.swagger-ui.path=/swagger-ui.html
