--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # ===============================
 # = SWAGGER
 # ===============================
-springdoc.packagesToScan=com.claro.claropay.ms.mssmsservice
+springdoc.packagesToScan=ar.com.cart.demo
+#springdoc.pathsToMatch=/v1,/
 springdoc.swagger-ui.path=/swagger-ui.html
